fixed wrong searchstring returned in list_action ajax fixed remove func not being bound to dynamically created list tag changed staticmethods to also change book state if its present in id_map handle no books returned in search and show_entries

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,6 @@
-- change offset queries to use keyset pagination -> store last(displayed)id in webgui, also get one more row than needed to check if we have a next page
-    or mb even 2 more rows and grab the ten in the middle to know if prev/next btn needed?
-- fix commited state callback still getting Nones when loading from db
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
     e.g. for ExternalInfo remove book_id Column and leave book AssociatedColumnOne
-    or leave col but make book not be an associated col but relationship property or sth similar like in sqlalchemy
-- if i reload a book in webgui since i e.g. changed downloaded to 1 in db
-        will give me book from id_map
-        -> should i just update the values on the book from row?
-            only for cols that havent changed?         
+    or leave col but make book not be an associated col but relationship property or sth similar like in sqlalchemy    
                 
 
 - thread/subprocess for network stuff
@@ -15,13 +8,21 @@
     - assoc col lazy
                 -> either leaves assoc col alone if theyre lazy loaded
                 -> or loads them if theyre eager loaded
-- create indices for Tags.name, Category.name etc.? + Books.title?
+- create indices for Tags.name, Category.name etc.?
+- actual DBRow obj in assoc col
+- use ids for adding removing from db (+name for displaying)
+    or option for both and decide based on param type?
 - check newly added books for dl (on production db)
 - tests
 - webgui security
 
        
 --CANCELED-----------------------------------------------------------------------------------------------------------------
+- removed staticmehtods that change state in db
+	-> changes wont propagate to book that may be in id_map
+	-> if we tried to get book from id_map in static methods it would work for normal columns since prior changes would be overwritten (would need to reset commited_state for that col)
+		but it wouldnt work for assoc cols since changes wouldnt get overwritten
+		unless we used set
 - mb add parent_id field so a chapter/volume can be attributed to a larger book
     also works rn with collection but might spam the display if there are too many chapters+books in a collection
 - mb switch to only ids when adding/removing joined col values from webGUI
