del cover if we dont add book started changing import_book to go to show_edit_book instead of adding book to db directly

--- a/todo.txt
+++ b/todo.txt
@@ -10,7 +10,7 @@
 - use ids for adding removing from db (+name for displaying)
     or option for both and decide based on param type?
 - check newly added books for dl (on production db)
-- rather show edit book when importing?
+- rather show edit book when importing
 - tests
 - webgui security
 
