--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,7 @@
     or option for both and decide based on param type?
 - check newly added books for dl (on production db)
 - rather show edit book when importing
+- None in add/edit book
 - tests
 - webgui security
 
