--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
 - check newly added books for dl (on production db)
 - tests
-- webgui security
-    only allow authenticated users to access urls like /book/<int:book_id>/ext_info/<int:ext_info_id>/update
-
+- remove copy pasted html/css
 
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
     e.g. for ExternalInfo remove book_id Column and leave book AssociatedColumnOne
