removed title from metadata in tsu extractor
added tests

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,12 @@
 - check newly added books for dl (on production db)
-- tests
+- tests:
+    search_normal_mult_assoc
+    col+assoc col test commited_state and callbacks, types for col
+    id_map (basically includes load_instance)
+    MangaDB
+    Book
+    ExternalInfo
+    threads?    
 - remove copy pasted html/css
 
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
