fixed bug in ext companion fetch_book_info: forgot to specify book id in slq for ext info row toggle_dl done (but changes wont show on webgui until restart due to being loaded from id_map)

--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,7 @@
     add_book + cancel
     edit_book
     upload_cover
+- update unchanged vals from db when loading instance?    
 - remove copy pasted html/css
 
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
