--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
 - check newly added books for dl (on production db)
+- fix webgui (esp. retrieve book data)
+    - fix: jump to http://www.tsumino.com/Book/Info/27535/the-night-she-touched-me-fakku -> shows add anyway
+    - book upd changes didnt work
 - test webgui: ??
     auth system
     import_book
@@ -11,7 +14,6 @@
     upload_cover
 - update unchanged vals from db when loading instance?    
 - remove copy pasted html/css
-- fix: jump to http://www.tsumino.com/Book/Info/27535/the-night-she-touched-me-fakku -> shows add anyway
 
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
     e.g. for ExternalInfo remove book_id Column and leave book AssociatedColumnOne
