--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,10 @@
 - test webgui: ??
     import_book
     update_book_ext_info
-    apply_upd_changes
     add_ext_info
     add_book + cancel
-    edit_book
     upload_cover
+- change functions in webgui to redirect instead of returning the func to redirect to if the url should change    
 - webgui ajax: also change input hidden csrf token    
 - update unchanged vals from db when loading instance?    
 - remove copy pasted html/css
