--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,12 @@
 - test webgui: ??
-    import_book
     update_book_ext_info
     add_ext_info
-    add_book + cancel
+    add_book(+ext_info json) + cancel
 - change functions in webgui to redirect instead of returning the func to redirect to if the url should change    
-- webgui ajax: also change input hidden csrf token    
 - update unchanged vals from db when loading instance?    
+    or at least make sure that e.g. when we save external info with book_id but without adding it to book
+    book will be modified to match state in db?
+    sqlalchemy uses user.addresses = [addr1, addr2] session.commit()...
 - remove copy pasted html/css
 
 --IDEAS/NEW FEATURES-------------------------------------------------------------------------------------------------------
