thumb grid with flexbox css but if a row isnt full the thumbs are bigger than the rest to have them be the same size id have to use flex: 1 0 0; on the children of the flex container but then (since i just use with+height 100% instead of fixed width) theyll all be on one line and really small -> either use fixed size in px or % or use bootstraps columns but then the searchResult container will change size -> adam13531 recommended using grid

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
     book will be modified to match state in db?
     sqlalchemy uses user.addresses = [addr1, addr2] session.commit()...
 - remove copy pasted html/css
+- add read status col
 
 --IDEAS/NEW FEATURES-------------------------------------------------------------------------------------------------------
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
