fixed not having meta viewport tag which lead to phones not responding to media queries use full page on smaller devices -> adjusted media queries auth html+css fixed show_info done for now

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
     sqlalchemy uses user.addresses = [addr1, addr2] session.commit()...
 - remove copy pasted html/css
 - add read status col
+- language -> lang_id etc. in webgui search
 
 --IDEAS/NEW FEATURES-------------------------------------------------------------------------------------------------------
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
