--- a/todo.txt
+++ b/todo.txt
@@ -3,9 +3,8 @@
     book will be modified to match state in db?
     sqlalchemy uses user.addresses = [addr1, addr2] session.commit()...
 - import multiple add ext info if already in db
-- set rating webgui didnt set on book in id_map    
-- sort tags
 - merge/link books or multiple titles/book?
+- bug in paging when going prev and sorting by last change
 
 --IDEAS/NEW FEATURES-------------------------------------------------------------------------------------------------------
 - assoc col with ONETOMANY/MANYTOONE hide _id col and only show row/object
